Ajuste de lógica en la api de twilio

--- a/Birlik_Mobile/Components/Layout/NavMenu.razor
+++ b/Birlik_Mobile/Components/Layout/NavMenu.razor
@@ -17,10 +17,22 @@
                 <i class="bi bi-file-earmark-text-fill active-icon"></i>
             </div>
         </NavLink>
+        <NavLink class="nav-item" href="cliente/facturas">
+            <div class="icon-wrapper">
+                <i class="bi bi-receipt"></i>
+                <i class="bi bi-receipt-cutoff active-icon"></i>
+            </div>
+        </NavLink>
         <NavLink class="nav-item" href="cliente/siniestros">
             <div class="icon-wrapper">
                 <i class="bi bi-exclamation-circle"></i>
                 <i class="bi bi-exclamation-circle-fill active-icon"></i>
+            </div>
+        </NavLink>
+        <NavLink class="nav-item" href="cliente/emergencia">
+            <div class="icon-wrapper">
+                <i class="bi bi-telephone-fill text-danger"></i>
+                <i class="bi bi-telephone-fill text-danger active-icon"></i>
             </div>
         </NavLink>
     }
@@ -35,7 +47,7 @@
         </NavLink>
     }
 
-    <NavLink class="nav-item" href="perfil">
+    <NavLink class="nav-item" href="cliente/datos">
         <div class="icon-wrapper">
             <i class="bi bi-person"></i>
             <i class="bi bi-person-fill active-icon"></i>
